--- a/src/app/Components/sumativavisual/sumativavisual.component.html
+++ b/src/app/Components/sumativavisual/sumativavisual.component.html
@@ -1,1 +1,2 @@
-<p>sumativavisual works!</p>
+<app-btnprimario (buttonClick)="onButtonClick()"></app-btnprimario>
+<app-view [colorChange]="colorChange"></app-view>
