--- a/src/app/Visualizar/view/view.component.html
+++ b/src/app/Visualizar/view/view.component.html
@@ -1,1 +1,3 @@
-<p>view works!</p>
+<div [ngStyle]="{'background-color': color}" class="color-box" (click)="changeColor()">
+    ¡Haz clic aquí!
+</div>
