--- a/src/app/Visualizar/view/view.component.html
+++ b/src/app/Visualizar/view/view.component.html
@@ -1,3 +1,1 @@
-<div [ngStyle]="{'background-color': color}" class="color-box" (click)="changeColor()">
-    ¡Haz clic aquí!
-</div>
+<div class="color-box" [style.background-color]="color"></div>
