--- a/src/app/Visualizar/view/view.component.css
+++ b/src/app/Visualizar/view/view.component.css
@@ -1,7 +1,6 @@
 .color-box {
     width: 100px;
-    /* Asegúrate de que tenga tamaño */
     height: 100px;
-    transition: background-color 0.5s;
-    /* Animación suave */
+    transition: background-color 0.5s, transform 0.5s;
+    /* Añade la transición para el movimiento y el color */
 }
