--- a/src/app/Components/sumativavisual/sumativavisual.component.html
+++ b/src/app/Components/sumativavisual/sumativavisual.component.html
@@ -1,4 +1,3 @@
-<app-btnprimario (buttonClick)="onPrimaryButtonClick()"></app-btnprimario>
-<app-btnsecundario (moveEvent)="onSecondaryButtonClick()"></app-btnsecundario>
-<app-btnaceptar (acceptEvent)="onAcceptButtonClick()"></app-btnaceptar>
-<app-view [colorChange]="colorChange" [move]="move" [showMessage]="showMessage"></app-view>
+<app-btnprimario (buttonClick)="onColorButtonClick()"></app-btnprimario>
+<app-btnsecundario (moveEvent)="onMoveButtonClick()"></app-btnsecundario>
+<app-view [colorChange]="colorChange" [move]="move"></app-view>
