--- a/src/app/Components/sumativavisual/sumativavisual.component.html
+++ b/src/app/Components/sumativavisual/sumativavisual.component.html
@@ -1,3 +1,4 @@
 <app-btnprimario (buttonClick)="onColorButtonClick()"></app-btnprimario>
 <app-btnsecundario (moveEvent)="onMoveButtonClick()"></app-btnsecundario>
 <app-view [colorChange]="colorChange" [move]="move"></app-view>
+<app-password></app-password>
