--- a/src/app/Visualizar/view/view.component.html
+++ b/src/app/Visualizar/view/view.component.html
@@ -1,1 +1,8 @@
 <div class="color-box" [style.background-color]="color" [style.transform]="'translateX(' + position + 'px)'"> </div>
+
+<div class="view-container">
+    <h2>Valores Ingresados</h2>
+    <p><strong>Contraseña:</strong> {{ password }}</p>
+    <p><strong>Email:</strong> {{ email }}</p>
+    <p><strong>Texto:</strong> {{ text }}</p>
+</div>
