--- a/src/app/Inputs/password/password.component.html
+++ b/src/app/Inputs/password/password.component.html
@@ -1,1 +1,6 @@
-<p>password works!</p>
+<div>
+    <label for="password">Contraseña:</label>
+    <input type="password" id="password" [(ngModel)]="password" (ngModelChange)="validatePassword()" required />
+    <div *ngIf="!isValid && password.length > 0" style="color: red;">La contraseña debe tener al menos 8 caracteres.
+    </div>
+</div>
