--- a/src/app/Inputs/texto/texto.component.html
+++ b/src/app/Inputs/texto/texto.component.html
@@ -1,6 +1,2 @@
-<div>
-    <label for="texto">Texto:</label>
-    <input type="text" id="texto" [(ngModel)]="texto" (ngModelChange)="validateTexto()" required />
-    <div *ngIf="!isValid && texto.length > 0" style="color: red;">El texto no puede estar vacío y solo puede contener
-        letras y números.</div>
-</div>
+<textarea cols="35" rows="10" minlength="15" maxlength="250"> </textarea>
+<input id="Comentarios"> 
