--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: #F9F9F9;
     /* Color de fondo suave */
     margin: 0;
