--- a/src/app/Components/btncancelar/btncancelar.component.css
+++ b/src/app/Components/btncancelar/btncancelar.component.css
@@ -1,9 +1,17 @@
-button {
-    background-color: #FFD700; /* Dorado suave */
-    color: white; /* Color del texto */
-    font-size: 16px;
-  }
-  
-  button:hover {
-    background-color: #FFC0CB; /* Cambiar a rosado suave al pasar el mouse */
-  }
+.btn-cancelar {
+  background-color: #f44336;
+  /* Rojo */
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s;
+}
+
+.btn-cancelar:hover {
+  background-color: #e53935;
+  /* Rojo más oscuro */
+}
