--- a/src/app/Inputs/password/password.component.html
+++ b/src/app/Inputs/password/password.component.html
@@ -1,6 +1,2 @@
-<div>
-    <label for="password">Contraseña:</label>
-    <input type="password" id="password" [(ngModel)]="password" (ngModelChange)="validatePassword()" required />
-    <div *ngIf="!isValid && password.length > 0" style="color: red;">La contraseña debe tener al menos 8 caracteres.
-    </div>
-</div>
+<label> Contraseña: </label>
+<input class="Contraseña" type="password" placeholder="Ingrese su Contraseña ☻">
