--- a/src/app/Visualizar/view/view.component.css
+++ b/src/app/Visualizar/view/view.component.css
@@ -1,6 +1,12 @@
 .color-box {
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
+    background-color: magenta;
+    border-radius: 5px;
+    /* Bordes redondeados */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    margin: 10px 0;
+    /* Espaciado superior e inferior */
     transition: background-color 0.5s, transform 0.5s;
     /* Añade la transición para el movimiento y el color */
 }
