--- a/src/app/Inputs/password/password.component.html
+++ b/src/app/Inputs/password/password.component.html
@@ -1,2 +1,7 @@
-<label> Contraseña: </label>
-<input class="Contraseña" type="password" placeholder="Ingrese su Contraseña ☻">
+<div>
+    <label for="password">Contraseña:</label>
+    <input type="password" id="password" [(ngModel)]="password" (ngModelChange)="validatePassword()" required>
+    <ul *ngIf="passwordErrors.length">
+        <li *ngFor="let error of passwordErrors">{{ error }}</li>
+    </ul>
+</div>
