--- a/src/app/Visualizar/view/view.component.html
+++ b/src/app/Visualizar/view/view.component.html
@@ -1,1 +1,11 @@
 <div class="color-box" [style.background-color]="color" [style.transform]="'translateX(' + position + 'px)'"> </div>
+<div>
+    <h3>Vista de Datos Ingresados</h3>
+    <p><strong>Correo Electrónico:</strong> {{ email }}</p>
+    <p><strong>Contraseña:</strong> {{ password }}</p>
+    <p><strong>Texto:</strong> {{ texto }}</p>
+
+    <div *ngIf="!email || !password || !texto" style="color: red;">
+        <p>Por favor, complete los campos obligatorios.</p>
+    </div>
+</div>
