--- a/src/app/Inputs/email/email.component.html
+++ b/src/app/Inputs/email/email.component.html
@@ -1,2 +1,7 @@
-<label> Correo Electrónico: </label>
-<input id="Correo" type="email" placeholder="Ingrese su Correo Electrónico ☻">
+<div>
+    <label for="email">Correo Electrónico:</label>
+    <input type="email" id="email" [(ngModel)]="email" (ngModelChange)="validateEmail()" required>
+    <ul *ngIf="emailErrors.length">
+        <li *ngFor="let error of emailErrors">{{ error }}</li>
+    </ul>
+</div>
