--- a/src/app/Inputs/texto/texto.component.html
+++ b/src/app/Inputs/texto/texto.component.html
@@ -1,2 +1,7 @@
-<textarea cols="35" rows="10" minlength="15" maxlength="250"> </textarea>
-<input id="Comentarios"> 
+<div>
+    <label for="texto">Texto:</label>
+    <input type="text" id="texto" [(ngModel)]="texto" (ngModelChange)="validateTexto()" required>
+    <ul *ngIf="textoErrors.length">
+        <li *ngFor="let error of textoErrors">{{ error }}</li>
+    </ul>
+</div>
