--- a/src/app/Components/sumativavisual/sumativavisual.component.html
+++ b/src/app/Components/sumativavisual/sumativavisual.component.html
@@ -1,22 +1,28 @@
-<div>
-    <h2>Formulario de Entrada</h2>
+<!-- src/app/Components/sumativavisual/sumativavisual.component.html -->
+<div [style.backgroundColor]="colorChange ? 'lightblue' : 'white'">
+    <h1>Sumativa Visual</h1>
+    
+    <form>
+      <label>
+        Email:
+        <input type="email" [(ngModel)]="email" name="email" required />
+      </label>
+      <br />
+      <label>
+        Contraseña:
+        <input type="password" [(ngModel)]="password" name="password" required />
+      </label>
+      <br />
+      <label>
+        Texto:
+        <input type="text" [(ngModel)]="texto" name="text" />
+      </label>
+      <br />
+    </form>
+  </div>>
 
-    <!-- Componente Email -->
-    <app-email [(email)]="email"></app-email>
-
-    <!-- Componente Password -->
-    <app-password [(password)]="password"></app-password>
-
-    <!-- Componente Texto -->
-    <app-texto [(texto)]="texto"></app-texto>
-
-    <!-- Mensaje de error si el formulario no es válido -->
-    <div *ngIf="!validateForm()" style="color: red;">
-        <p>Por favor, complete los campos obligatorios.</p>
-    </div>
-</div>
 <app-btnprimario (buttonClick)="onColorButtonClick()"></app-btnprimario>
 <app-btnsecundario (moveEvent)="onMoveButtonClick()"></app-btnsecundario>
-<app-view [colorChange]="colorChange" [move]="move" [email]="email" [password]="password" [texto]="texto"></app-view>
+<app-view [colorChange]="colorChange" [move]="move"></app-view>
 <app-btnaceptar></app-btnaceptar>
 <app-btncancelar></app-btncancelar>
