--- a/src/app/Inputs/password/password.component.html
+++ b/src/app/Inputs/password/password.component.html
@@ -1,7 +1,8 @@
-<div>
-    <label for="password">Contraseña:</label>
-    <input type="password" id="password" [(ngModel)]="password" (ngModelChange)="validatePassword()" required>
-    <ul *ngIf="passwordErrors.length">
+<!-- src/app/Inputs/password/password.component.html -->
+<form #passwordForm="ngForm" (ngSubmit)="validatePassword(passwordForm)">
+    <input type="password" [(ngModel)]="password" name="password" required placeholder="Ingrese su contraseña" />
+    <button type="submit">Enviar</button>
+    <ul *ngIf="passwordErrors.length > 0">
         <li *ngFor="let error of passwordErrors">{{ error }}</li>
     </ul>
-</div>
+</form>
