--- a/src/app/Components/sumativavisual/sumativavisual.component.html
+++ b/src/app/Components/sumativavisual/sumativavisual.component.html
@@ -23,6 +23,6 @@
 
 <app-btnprimario (buttonClick)="onColorButtonClick()"></app-btnprimario>
 <app-btnsecundario (moveEvent)="onMoveButtonClick()"></app-btnsecundario>
-<app-view [colorChange]="colorChange" [move]="move"></app-view>
+<app-view [colorChange]="colorChange" [move]="move" [email]="email" [password]="password" [text]="texto" ></app-view>
 <app-btnaceptar></app-btnaceptar>
 <app-btncancelar></app-btncancelar>
