--- a/src/app/Visualizar/view/view.component.html
+++ b/src/app/Visualizar/view/view.component.html
@@ -1,3 +1,9 @@
 <!-- src/app/Visualizar/view/view.component.html -->
-
+<!-- src/app/Visualizar/view/view.component.html -->
+<div>
+    <h2>Datos Ingresados</h2>
+    <p><strong>Email:</strong> {{ email }}</p>
+    <p><strong>Contraseña:</strong> {{ password }}</p>
+    <p><strong>Texto:</strong> {{ text }}</p>
+</div>
 <div class="color-box" [style.background-color]="color" [style.transform]="'translateX(' + position + 'px)'"> </div>
