--- a/src/app/Components/sumativavisual/sumativavisual.component.html
+++ b/src/app/Components/sumativavisual/sumativavisual.component.html
@@ -1,28 +1,34 @@
 <!-- src/app/Components/sumativavisual/sumativavisual.component.html -->
 <div [style.backgroundColor]="colorChange ? 'lightblue' : 'white'">
     <h1>Sumativa Visual</h1>
-    
+
     <form>
-      <label>
-        Email:
-        <input type="email" [(ngModel)]="email" name="email" required />
-      </label>
-      <br />
-      <label>
-        Contraseña:
-        <input type="password" [(ngModel)]="password" name="password" required />
-      </label>
-      <br />
-      <label>
-        Texto:
-        <input type="text" [(ngModel)]="texto" name="text" />
-      </label>
-      <br />
+        <label>
+            Email:
+            <input type="email" [(ngModel)]="email" name="email" required />
+        </label>
+        <br />
+        <label>
+            Contraseña:
+            <input type="password" [(ngModel)]="password" name="password" required />
+        </label>
+        <br />
+        <label>
+            Texto:
+            <input type="text" [(ngModel)]="texto" name="text" />
+        </label>
+        <br />
+
     </form>
-  </div>>
+    <p *ngIf="successMessage"><strong>{{ successMessage }}</strong></p> <!-- Mostrar mensaje de éxito -->
+
+
+</div>
+
+
 
 <app-btnprimario (buttonClick)="onColorButtonClick()"></app-btnprimario>
 <app-btnsecundario (moveEvent)="onMoveButtonClick()"></app-btnsecundario>
-<app-view [colorChange]="colorChange" [move]="move" [email]="email" [password]="password" [text]="texto" ></app-view>
-<app-btnaceptar></app-btnaceptar>
-<app-btncancelar></app-btncancelar>
+<app-btnaceptar (acceptClick)="onAccept()"></app-btnaceptar>
+<app-view [colorChange]="colorChange" [move]="move" [email]="email" [password]="password" [text]="texto"
+    [successMessage]="successMessage"></app-view>
