--- a/src/app/Visualizar/view/view.component.html
+++ b/src/app/Visualizar/view/view.component.html
@@ -5,9 +5,11 @@
     <p><strong>Email:</strong> {{ email }}</p>
     <p><strong>Contraseña:</strong> {{ password }}</p>
     <p><strong>Texto:</strong> {{ text }}</p>
-    <div *ngIf="successMessage"
-        style="border: 1px solid green; padding: 10px; margin-top: 10px; background-color: #e6ffe6;">
-        <strong>{{ successMessage }}</strong>
 
+    <!-- Muestra el mensaje de éxito directamente en el componente View -->
+    <div *ngIf="successMessage" class="success-message">
+        <strong>{{ successMessage }}</strong>
     </div>
-    <div class="color-box" [style.background-color]="color" [style.transform]="'translateX(' + position + 'px)'"> </div>
+</div>
+
+<div class="color-box" [style.background-color]="color" [style.transform]="'translateX(' + position + 'px)'"> </div>
