--- a/src/app/Components/btncancelar/btncancelar.component.css
+++ b/src/app/Components/btncancelar/btncancelar.component.css
@@ -1,17 +1,19 @@
-.btn-cancelar {
-  background-color: #f44336;
-  /* Rojo */
+button {
+  background-color: red;
+  /* Color de fondo del botón */
   color: white;
+  /* Color del texto */
   border: none;
-  border-radius: 5px;
+  /* Sin borde */
   padding: 10px 20px;
-  font-size: 16px;
+  /* Espaciado interno */
+  border-radius: 5px;
+  /* Bordes redondeados */
   cursor: pointer;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s;
+  /* Cambiar el cursor al pasar el mouse */
 }
 
-.btn-cancelar:hover {
-  background-color: #e53935;
-  /* Rojo más oscuro */
+button:hover {
+  background-color: darkred;
+  /* Color de fondo al pasar el mouse */
 }
