--- a/src/app/Inputs/email/email.component.html
+++ b/src/app/Inputs/email/email.component.html
@@ -3,6 +3,6 @@
     <input type="email" [(ngModel)]="email" name="email" required placeholder="Ingrese su correo" />
     <button type="submit">Enviar</button>
     <ul *ngIf="emailErrors.length > 0">
-        <li *ngFor="let error of emailErrors">{{ error }}</li>
-    </ul>
+        <li *ngFor="let eror }}</li>
+    </ul>ror of emailErrors">{{ err
 </form>
