--- a/src/app/Visualizar/view/view.component.css
+++ b/src/app/Visualizar/view/view.component.css
@@ -108,3 +108,8 @@ p {
     font-family: 'Arial', sans-serif;
     /* Fuente moderna */
 }
+
+.dark-mode {
+    background-color: black;
+    color: white;
+}
