--- a/src/app/Visualizar/view/view.component.html
+++ b/src/app/Visualizar/view/view.component.html
@@ -1,20 +1,21 @@
 <!-- src/app/Visualizar/view/view.component.html -->
-<!-- src/app/Visualizar/view/view.component.html -->
-<div>
-    <h2>Datos Ingresados</h2>
-    <p><strong>Email:</strong> {{ email }}</p>
-    <p><strong>Contraseña:</strong> {{ password }}</p>
-    <p><strong>Texto:</strong> {{ text }}</p>
+<div [ngClass]="{'dark-mode': isDarkMode}">
+    <div>
+        <h2>Datos Ingresados</h2>
+        <p><strong>Email:</strong> {{ email }}</p>
+        <p><strong>Contraseña:</strong> {{ password }}</p>
+        <p><strong>Texto:</strong> {{ text }}</p>
 
 
 
-</div>
+    </div>
 
-<div class="color-box" [style.background-color]="color" [style.transform]="'translateX(' + position + 'px)'"> </div>
+    <div class="color-box" [style.background-color]="color" [style.transform]="'translateX(' + position + 'px)'"> </div>
 
 
-<div *ngIf="showMessage" @messageAnimation
-    style="background-color: lightgray; padding: 20px; border-radius: 10px; margin-top: 20px;">
-    <p>¡Has hecho clic en Aceptar!</p>
-    <app-btncancelar (closeClick)="closeMessage()"></app-btncancelar>
+    <div *ngIf="showMessage" @messageAnimation
+        style="background-color: lightgray; padding: 20px; border-radius: 10px; margin-top: 20px;">
+        <p>¡Has hecho clic en Aceptar!</p>
+        <app-btncancelar (closeClick)="closeMessage()"></app-btncancelar>
+    </div>
 </div>
