--- a/src/app/Visualizar/view/view.component.css
+++ b/src/app/Visualizar/view/view.component.css
@@ -113,3 +113,17 @@ p {
     background-color: black;
     color: white;
 }
+
+/* view.component.css */
+.container {
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    background-color: #f5f5f5;
+    /* Fondo claro por defecto */
+}
+
+body.dark-mode .container {
+    background-color: #1e1e1e;
+    /* Fondo oscuro en modo oscuro */
+}
